Adds final styles and assets to app

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -7,53 +7,51 @@
             <h1>Who We Are</h1>
         </div>
         <div class="col-sm-6 col-12 d-flex justify-content-center align-items-center">
-            <h5>It takes a special group of talented individuals to bright life to such project.
+            <h5>It takes a special group of talented individuals to bring life to such a project.
                 It takes passion, sleepless nights, hard work and dedication. We take pride in providing 
-                our customers with the mos up to date news and articles. Get to know the inddividuals beind
+                our customers with the most up to date news and articles. Get to know the individuals behind
                 the masterpiece.
             </h5>
         </div>
     </div>
     <div class="team-section">
-        <div class="row first-team-row">
-            <div class="col-md-4 offset-md-0 col-12">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="{% static 'Hsu.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Akeem Dainty</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
+        <div class="row first-team-row d-flex justify-content-center align-items-center">
+          <div class="col-md-6 mx-auto col-12 d-flex profile-bg justify-content-center align-items-center">
+            <div class="card profile-card" data-tilt style="width: 400px;">
+              <img class="card-img-top" src="{% static 'Hsu.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Elaine H.</h5>
+                <p class="card-text">Software Engineer</p>
+              </div>
             </div>
-            <div class="col-md-4 offset-md-0 col-12">
-                <div class="card" style="width:18rem;">
-                    <img class="card-img-top" src="{% static 'Vicky.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
+          </div>
+          <div class="col-md-6 mx-auto col-12 d-flex profile-bg justify-content-center align-items-center">
+            <div class="card profile-card" data-tilt style="width:400px;">
+                <img class="card-img-top" src="{% static 'Vicky.jpg' %}" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Victoria M.</h5>
+                  <p class="card-text">Software Engineer</p>
+                </div>
             </div>
-        </div>
-        <div class="row second-team-row">
-            <div class="d-flex col-xl-6 offset-xl-0 col-lg-6 offset-lg-1 col-md-10 offset-md-1 col-12 justify-content-center align-items-center">
-                <div class="card">
-                    <img class="card-img-top" src="{% static 'Keemm.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
+          </div> 
+          <div class="col-md-6 mx-auto col-12 d-flex profile-bg justify-content-center ">
+            <div class="card profile-card" data-tilt style="width:400px;">
+                <img class="card-img-top" src="{% static 'Keemm.jpg' %}" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Akeem D.</h5>
+                  <p class="card-text">Software Engineer</p>
+                </div>
             </div>
-            <div class="d-flex col-xl-6 offset-xl-0 col-lg-6 offset-lg-1 col-md-10 offset-md-1 col-12 justify-content-center align-items-center">
-                <div class="card">
-                    <img class="card-img-top" src="{% static 'Grantt.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
+          </div>  
+          <div class="col-md-6 mx-auto col-12 d-flex profile-bg justify-content-center ">
+            <div class="card profile-card" data-tilt style="width:400px;">
+                <img class="card-img-top" src="{% static 'Grantt.jpg' %}" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Grant F.</h5>
+                  <p class="card-text">Software Engineer</p>
+                </div>
             </div>
+          </div>   
         </div>
     </div>
 </div>
