--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,10 +5,10 @@
 
 
 <div class="container-fluid banner">
-  <div class="row">
+  <div class="row inner-banner">
     <div class="col-12 text-center justify-content-center align-items-center">
       <h1><span class="font-change">Innovative</span>, Premium News at Your Fingertips</h1>
-      <h6>Curating the best shit just for you since 2021.</h6>
+      <h6>Curating the best shit just for you since 2021</h6>
     </div>
   </div>
   <div class="row pb-4 d-flex">
