--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -75,6 +75,97 @@ body {
 
 }
 
+.detail-wrapper p {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.detail-banner {
+  background-image: linear-gradient(to bottom, rgba(2, 2, 2, 0.52), rgba(2, 2, 2, 0.52), rgba(2, 2, 2, 0.52), rgba(0, 0, 0, 0.73)),
+  url('/static/bespoke-bg.png');
+  height: 100%;
+  margin-top: 40px;
+  padding: 40px 0px;
+}
+
+.detail-content {
+  margin: 40px 0px;
+}
+
+.publisher {
+  margin-bottom: 20px;
+}
+
+.detail-banner h1 {
+  font-family: 'Playfair Display', serif;
+  color: #FFF;
+}
+
+.detail-banner h4 {
+  color: #5C5C5C;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.comment-form {
+  width: 100%;
+}
+
+.comment-form label {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.comment-form input {
+  width: 100%;
+  background: #F6F6F6;
+}
+
+.comment-form #id_content {
+  height: 100px;
+  word-wrap: break-word;
+}
+
+.comment-form .btn-outline-dark {
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px 20px;
+  background: #000;
+  color: #FFF;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.comments {
+  margin: 50px 0px;
+}
+
+.comment-row {
+  border: 1px solid #000;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.show-content {
+  display: block;
+}
+
+.inner-banner {
+  padding-bottom: 30px;
+}
+
+
+
 .form-inline i {
   position: absolute;
   margin: 0px 0px 0px 200px;
@@ -86,6 +177,136 @@ body {
   background: transparent;
   border-radius: 0px;
 }
+
+.login-container {
+  margin-top: 120px;
+}
+
+.signup-container {
+  margin-top: 100px;
+}
+
+.add-edit-wrapper {
+  margin: 80px 0px;
+  box-shadow: 5px 5px;
+  border: 1px solid #000;
+  padding: 20px;
+}
+
+.add-edit-form label {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.add-edit-form input {
+  background: #E7E7E7;
+  width: 100%;
+  border: 0px;
+  padding: 8px;
+}
+
+.add-edit-form textarea {
+  width: 100%;
+  height: 100px;
+}
+
+.add-edit-form .btn {
+  background: #000;
+  color: #FFF;
+}
+
+.login-container a, .signup-container a {
+  
+    color: #000 !important;
+    font-weight: 600;
+  
+}
+.login-container h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+.login-container h4 {
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+.login-form {
+  padding: 5px;
+  background: #FFF;
+  color: #000;
+  width: 400px;
+  margin: 0 auto;
+}
+
+.login-form label {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+
+}
+
+.login-form input{
+  background: #F6F6F6;
+  width: 100%;
+  border: 0px;
+  padding: 8px;
+}
+
+.login-form .btn {
+  background: #000;
+  color: #FFF;
+  margin-top: 30px;
+  font-weight: 600;
+}
+
+.signup-form {
+  padding: 5px;
+  background: #FFF;
+  color: #000;
+  width: 400px;
+  margin: 0 auto;
+}
+
+.signup-form label {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.signup-form input{
+  background: #F6F6F6;
+  width: 100%;
+  border: 0px;
+  padding: 8px;
+}
+
+.signup-form .btn{
+  background: #000;
+  color: #FFF;
+  margin-top: 30px;
+  font-weight: 600;
+}
+
+.helptext {
+  display: none;
+}
+
+form ul {
+  display: none;
+}
+.article-group {
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 5px 5px;
+  border: 1px solid #000;
+  margin-top: 20px;
+}
+
 
 footer {
   background: #000 !important;
@@ -106,19 +327,61 @@ footer i {
   margin: 0px 20px 0px 0px;
 }
 
+footer .btn {
+  color: #fff;
+  background: #000;
+  border-radius: 0px; 
+}
+
 .card {
-  border: 1px solid #E7E7E7;
-  border-radius: 10px !important;
+  border: 1px solid #000;
+  border-radius: 0px !important;
   background: transparent;
+  box-shadow: 5px 5px;
 }
 
 .card-img-top {
   width: 100%;
+  border-radius: 0px !important;
 }
 
 .card-title {
   font-family: 'Playfair Display', serif !important;
   font-weight: 500;
+}
+
+.bespoke-card {
+  border: 1px solid #000;
+  box-shadow: 5px 5px;
+  border-radius: 0px !important;
+}
+
+.bespoke-card  .card-title {
+  color: #000 !important;
+}
+
+.bespoke-card  .card-text {
+  color: #919192 !important;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis !important;
+  max-width: 300px;
+}
+
+.bespoke-card a{
+  text-decoration: none !important;
+}
+
+.bespoke-card-actions a{
+  color: #000 !important;
+}
+
+.card-footer {
+  border-bottom: 1px solid #000;
+}
+
+.delete-article {
+  border-left: 1px solid #000;
 }
 
 .add-article-row {
@@ -137,8 +400,10 @@ footer i {
   color: #FFF;
 }
 
+
+
 .about-wrapper {
-  margin: 80px auto;
+  margin: 100px auto;
 }
 
 .about-wrapper h1{
@@ -151,7 +416,22 @@ footer i {
 }
 
 .first-team-row {
+  background: #FFF;
+  padding: 40px 0px;
+  border: 1px solid #000;
+  box-shadow: 5px 5px;
+}
 
+.profile-bg {
+  padding: 10px;
+  margin: 20px 20px;
+}
+
+.profile-card {
+  background: #000;
+  border: 1px solid #000;
+  color: #FFF;
+  box-shadow: 5px 5px;
 }
 
 .second-team-row {
@@ -162,4 +442,10 @@ footer i {
   .card {
     width: 100%; 
   }
+
+  .delete-article {
+    border: none;
+    
+  }
 }
+
