--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,14 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
-<h1>Sign Up</h1>
+{% if error_message %}
+<p class="red-text">{{ error_message }}</p>
+{% endif %}
 
-{% if error_message %}<p class="red-text">{{ error_message }}</p>{% endif %}
-
-<form method="post" action="{% url 'signup' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-  <input type="submit" class="btn" value="signup">
-</form>
+{%  load static %}
+<div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-md-10 mx-auto signup-container">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-md-6">
+          <div class="text-center">
+            <h2 class="">Create an account</h2>
+            <p>Already have a Bespoke account? <a href="{% url 'login' %}">Login</a></p>
+          </div>
+          <form method="post" action="{% url 'signup' %}" class="signup-form">
+              {% csrf_token %}
+              {{ form.as_p }}
+            <input type="submit" class="btn" value="Sign Up">
+          </form>
+        </div>
+        <div class="col-md-6 align-items-center justify-content-center d-flex">
+          <img src="{% static 'article-group.png' %}" data-tilt class="article-group" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+          
 
 {% endblock %}
