--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -105,6 +105,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+.detail-wrapper .h4 {
+  padding: 0px 40px;
+}
+
 .comment-form {
   width: 100%;
 }
@@ -144,17 +148,52 @@ body {
   border: 1px solid #000;
   padding: 5px;
   margin-bottom: 10px;
+  font-weight: 600;
+}
+
+.comment-row p {
+  margin-bottom: 5px !important;
+}
+
+.date {
+  font-family: 'Montserrat', sans-serif;
+  font-style: italic;
+  font-size: 12px;
+  font-weight: 600;
+  color: #989898;
 }
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: relative;
   background-color: #f1f1f1;
   min-width: 100%;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  margin: 20px auto;
+  padding: 20px;
 }
+
+.dropdown-content form label {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.dropdown-content form input {
+  width: 100%;
+}
+
+.dropdown-content .update-btn {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  background: #000;
+  color: #FFF;
+}
+
 
 .show-content {
   display: block;
